--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "🚀 Hybrid AI documentation scraping system combining Crawl4AI (bulk) + Firecrawl MCP (on-demand) with Qdrant vector database for Claude Desktop/Code integration"
 readme = "README.md"
 license = { text = "MIT" }
-requires-python = ">=3.11,<3.13"
+requires-python = ">=3.11,<3.14"
 authors = [{ name = "BjornMelin", email = "your-email@example.com" }]
 # Add dynamic version support for future releases
 # dynamic = ["version"]
@@ -27,6 +27,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Documentation",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
@@ -34,9 +35,9 @@ classifiers = [
 
 dependencies = [
     # Core web framework & API
-    "fastapi>=0.115.12,<0.116.0",
-    "starlette>=0.41.0,<0.42.0",         # Compatible with FastAPI 0.115.12
-    "uvicorn[standard]>=0.34.2,<0.35.0",
+    "fastapi[standard]>=0.115.0,<0.120.0",
+    "starlette>=0.41.0,<0.45.0",         # Liberal constraint for better compatibility
+    "uvicorn[standard]>=0.34.0,<0.40.0",
     "python-multipart>=0.0.12,<0.1.0",   # For FastAPI file uploads
     # Data validation & configuration
     "pydantic>=2.11.5,<3.0.0",         # browser-use 0.2.6 compatibility
@@ -48,12 +49,12 @@ dependencies = [
     "firecrawl-py>=2.7.1",
     # Vector database & embeddings
     "qdrant-client[fastembed]>=1.14.2,<2.0.0",
-    "openai>=1.82.1,<2.0.0",
-    "fastembed>=0.6.1,<0.7.0",                 # Keep constraint - Python 3.13 incompatible in 0.7+
+    "openai>=1.56.0,<2.0.0",
+    "fastembed>=0.7.0,<0.8.0",                 # Python 3.13 compatible as of v0.7.0 (June 2025)
     "FlagEmbedding>=1.3.5,<2.0.0",
     # Data processing & ML (Python 3.13 compatible)
     "pandas>=2.2.3,<3.0.0",
-    "numpy>=1.26.0,<2.0.0",     # Better Python 3.12 support (1.26.0+)
+    "numpy>=1.26.0,<3.0.0",     # Allow NumPy 2.x for better Python 3.13 performance
     "scipy>=1.15.3,<2.0.0",     # Python 3.13 support from 1.13+
     "defusedxml>=0.7.1,<0.8.0", # Secure XML parsing
     # HTTP & async (optimized for performance)
@@ -90,16 +91,16 @@ dependencies = [
 [project.optional-dependencies]
 # Development tools
 dev = [
-    "pytest>=8.3.5,<9.0.0",
+    "pytest>=8.4.0,<9.0.0",
     "pytest-asyncio>=1.0.0,<2.0.0",
     "pytest-cov>=6.1.1,<7.0.0",
     "pytest-mock>=3.14.1,<4.0.0",
     "pytest-timeout>=2.3.1,<3.0.0",
-    "pytest-xdist>=3.5.0,<4.0.0",   # Parallel test execution
-    "hypothesis>=6.133.0,<7.0.0",   # Property-based testing
+    "pytest-xdist>=3.7.0,<4.0.0",   # Parallel test execution - latest performance improvements
+    "hypothesis>=6.135.0,<7.0.0",   # Property-based testing - latest features
     "mutmut>=2.5.1,<3.0.0",         # Mutation testing
     "fakeredis>=2.29.0,<3.0.0",
-    "ruff>=0.11.12,<0.12.0",
+    "ruff>=0.12.0,<0.13.0",
     "black>=25.1.0,<26.0.0",
 ]
 
@@ -201,16 +202,16 @@ upgrade-package = ["pip", "setuptools", "wheel", "hatchling"] # Keep core tools 
 resolution = "highest"                           # Prefer latest compatible versions
 python-preference = "managed"                    # Better Python version management
 
-# Python 3.12 compatibility constraints
+# Python 3.11-3.13 compatibility constraints
 constraint-dependencies = [
-    "setuptools>=70.0.0",  # Ensure Python 3.12 compatible setuptools
-    "hatchling>=1.25.0",   # Ensure Python 3.12 compatible hatchling
+    "setuptools>=70.0.0",  # Ensure Python 3.13 compatible setuptools
+    "hatchling>=1.25.0",   # Ensure Python 3.13 compatible hatchling
 ]
 
 # ===== Optimized Ruff Configuration =====
 [tool.ruff]
 line-length = 88
-target-version = "py312"
+target-version = "py313"
 src = ["src", "tests", "examples"]
 exclude = ["scripts"]
 # Performance optimization
@@ -345,7 +346,7 @@ addopts = [
 ]
 
 # Test discovery
-minversion = "8.0"
+minversion = "8.4"
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests",
@@ -469,9 +470,9 @@ dev = [
     "pytest-cov>=6.1.1",
     "pytest-mock>=3.14.1",
     "coverage>=7.6.0",
-    "ruff>=0.11.13",
+    "ruff>=0.12.0",
     "pytest-benchmark>=5.1.0",
-    "hypothesis>=6.135.14",
+    "hypothesis>=6.135.0,<7.0.0",
     "pytest-xdist>=3.7.0",
     "mutmut>=2.5.1",
     "locust>=2.37.10",
@@ -480,7 +481,7 @@ dev = [
 
 # ===== Mypy Type Checking Configuration =====
 [tool.mypy]
-python_version = "3.12"
+python_version = "3.13"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false       # Start permissive
